feat(nest-serve): 实现 JWT 授权和用户管理功能
- 新增 AuthModule 和 DefaultDataModule
- 实现 JWT token 生成和验证逻辑
- 添加用户管理相关实体、DTO、服务和控制器
- 更新文档并调整白名单配置
- 优化 API 结果拦截器

--- a/.env.sqlitedb
+++ b/.env.sqlitedb
@@ -6,13 +6,15 @@ PORT=3000
 DB_TYPE=sqlite
 # 数据库地址
 DB_DATABASE=./sqlitedata/nest.db
-# jwt密钥
+# token密钥
 JWT_SECRET=vAT6Syz5kWD64I63
-# jwt过期时间
-JWT_EXPIRES_IN=12
+# token过期时间 这里通常计算小时
+JWT_EXPIRES_IN=1
+# 刷新token过期时间 这里通常计算天
+JWT_REFRESH_EXPIRES_IN=1
 # 管理员密码
 ADMIN_PASSWORD=123456
-# 前端加密密钥
+# 前端加密密钥（32位）
 FRONTEND_KEY=8CDG5gHFGblXDBXaHZNxGVK4zpTZwzOx
-# 后端加密当前密钥
+# 后端加密当前密钥（32位）
 BACKEND_KEY=8CDG5gHFGblXDBXaHZNxGVK4zpTZwzOx
