feat(nest-serve): 支持多平台后端服务
- 新增 admin、web、app、mini 等平台的 JWT 配置
- 修改用户接口前缀为 api/v1/admin/users
- 为不同平台实现独立的 JWT 密钥和过期时间
- 更新用户服务以支持平台参数
- 添加用户退出登录接口
- 优化用户查询接口，支持模糊搜索

--- a/.env.dev
+++ b/.env.dev
@@ -14,12 +14,30 @@ DB_USER=root
 DB_PASSWORD=123456
 # 数据库名
 DB_DATABASE=express-server
-# token密钥
-JWT_SECRET=vAT6Syz5kWD64I63
-# token过期时间 这里通常计算小时
-JWT_EXPIRES_IN=1
-# 刷新token过期时间 这里通常计算天
-JWT_REFRESH_EXPIRES_IN=1
+# token密钥 - admin
+JWT_SECRET_ADMIN=vAT6Syz5kWD64I63
+# token密钥 - web
+JWT_SECRET_WEB=4UGBo1gPxMzNSGrh
+# token密钥 - app
+JWT_SECRET_APP=TxfLa2w9yReCDQFs
+# token密钥 - mini
+JWT_SECRET_MINI=OuiS1MFiwGo9w3c2
+# token过期时间 这里通常计算小时 - admin jwt使用的是秒，cookie使用的毫秒
+JWT_EXPIRES_IN_ADMIN=3600
+# 刷新token过期时间 这里通常计算天 - admin
+JWT_REFRESH_EXPIRES_IN_ADMIN=86400
+# token过期时间 这里通常计算小时 - web
+JWT_EXPIRES_IN_WEB=3600
+# 刷新token过期时间 这里通常计算天 - web
+JWT_REFRESH_EXPIRES_IN_WEB=86400
+# token过期时间 这里通常计算小时 - app
+JWT_EXPIRES_IN_APP=3600
+# 刷新token过期时间 这里通常计算天 - app
+JWT_REFRESH_EXPIRES_IN_APP=86400
+# token过期时间 这里通常计算小时 - mini
+JWT_EXPIRES_IN_MINI=3600
+# 刷新token过期时间 这里通常计算天 - mini
+JWT_REFRESH_EXPIRES_IN_m=MINI=86400
 # 管理员密码
 ADMIN_PASSWORD=123456
 # 前端加密密钥（32位）
