--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "dotenv": "^16.5.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "tus-node-server": "^0.9.0",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
