feat(nest-serve): 优化日志记录和身份验证功能
- 更新 JWT token 过期时间配置，统一使用毫秒单位
- 添加 LoggerModule 和 LoggerInterceptor 用于自定义日志记录
- 重构白名单类，支持 JWT 和 Logger 白名单
- 优化用户登录和身份验证逻辑
- 调整 HTTP 响应状态码

--- a/.env.dev
+++ b/.env.dev
@@ -22,22 +22,22 @@ JWT_SECRET_WEB=4UGBo1gPxMzNSGrh
 JWT_SECRET_APP=TxfLa2w9yReCDQFs
 # token密钥 - mini
 JWT_SECRET_MINI=OuiS1MFiwGo9w3c2
-# token过期时间 这里通常计算小时 - admin jwt使用的是毫秒，cookie使用的maxAge默认是秒，使用jwt的需要指定单位为秒
-JWT_EXPIRES_IN_ADMIN=3600
+# token过期时间 这里通常计算小时 - admin jwt使用的是毫秒，cookie使用的maxAge默认是毫秒(Express 框架)
+JWT_EXPIRES_IN_ADMIN=3600000
 # 刷新token过期时间 这里通常计算天 - admin
-JWT_REFRESH_EXPIRES_IN_ADMIN=86400
+JWT_REFRESH_EXPIRES_IN_ADMIN=86400000
 # token过期时间 这里通常计算小时 - web
-JWT_EXPIRES_IN_WEB=3600
+JWT_EXPIRES_IN_WEB=3600000
 # 刷新token过期时间 这里通常计算天 - web
-JWT_REFRESH_EXPIRES_IN_WEB=86400
+JWT_REFRESH_EXPIRES_IN_WEB=86400000
 # token过期时间 这里通常计算小时 - app
-JWT_EXPIRES_IN_APP=3600
+JWT_EXPIRES_IN_APP=3600000
 # 刷新token过期时间 这里通常计算天 - app
-JWT_REFRESH_EXPIRES_IN_APP=86400
+JWT_REFRESH_EXPIRES_IN_APP=86400000
 # token过期时间 这里通常计算小时 - mini
-JWT_EXPIRES_IN_MINI=3600
+JWT_EXPIRES_IN_MINI=3600000
 # 刷新token过期时间 这里通常计算天 - mini
-JWT_REFRESH_EXPIRES_IN_m=MINI=86400
+JWT_REFRESH_EXPIRES_IN_m=MINI=86400000
 # 前端加密密钥（32位）
 FRONTEND_KEY=8CDG5gHFGblXDBXaHZNxGVK4zpTZwzOx
 # 后端加密当前密钥（32位）
