--- a/.env.prod
+++ b/.env.prod
@@ -13,7 +13,7 @@ DB_USER=root
 # 数据库密码
 DB_PASSWORD=123456
 # 数据库名
-DB_DATABASE=express-server
+DB_DATABASE=nest-serve
 # token密钥 - admin
 JWT_SECRET_ADMIN=vAT6Syz5kWD64I63
 # token密钥 - web
