--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swagger-ui-express": "^5.0.1",
     "tus-node-server": "^0.9.0",
     "typeorm": "^0.3.22",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
