--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "nest-winston": "^1.10.2",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
@@ -60,6 +62,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
