--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "serve": "nest start --watch",
     "serve:dev": "cross-env NODE_ENV=dev nest start --watch",
-    "serve:prod": "cross-env NODE_ENV=prod nest start --watch",
     "serve:sqlitedb": "cross-env NODE_ENV=sqlitedb nest start --watch",
-    "start:prod": "node dist/main",
+    "start": "node dist/main",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
