feat(package): 添加 sqlitedb 环境的启动脚本
- 在 package.json 中新增 start:sqlitedb 脚本
- 使用 cross-env 设置 NODE_ENV 为 sqlitedb
- 运行 dist/main 文件启动应用

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve:dev": "cross-env NODE_ENV=dev nest start --watch",
     "serve:sqlitedb": "cross-env NODE_ENV=sqlitedb nest start --watch",
     "start": "node dist/main",
+    "start:sqlitedb": "cross-env NODE_ENV=sqlitedb node dist/main",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
