--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "serve:sqlitedb.koyeb": "cross-env NODE_ENV=sqlitedb.koyeb nest start --watch",
     "start": "node dist/main",
     "start:sqlitedb": "cross-env NODE_ENV=sqlitedb node dist/main",
+    "start:sqlitedb.koyeb": "cross-env NODE_ENV=sqlitedb.koyeb node dist/main",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
