refactor(env): 替换 HOST 为 BASE_URL 环境变量
- 在 .env、.env.dev、.env.sqlitedb 和 .env.sqlitedb.koyeb 文件中将 HOST 替换为 BASE_URL
- 在 src/main.ts 中使用 BASE_URL 替代 HOST 构建项目地址
- 此更改简化了环境配置，并提高了代码的可读性和可维护性

--- a/.env.sqlitedb.koyeb
+++ b/.env.sqlitedb.koyeb
@@ -1,4 +1,4 @@
 # 地址
-HOST=https://military-dionne-766187397-6c8e4b66.koyeb.app/
+BASE_URL=https://military-dionne-766187397-6c8e4b66.koyeb.app
 # 端口
 PORT=3000
