--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "node dist/main",
     "start:sqlitedb": "cross-env NODE_ENV=sqlitedb node dist/main",
     "start:sqlitedb.koyeb": "cross-env NODE_ENV=sqlitedb.koyeb node dist/main",
+    "start:sqlitedb.ClawCloud": "cross-env NODE_ENV=sqlitedb.ClawCloud node dist/main",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
