--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/platform-socket.io": "^11.1.5",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.1.5",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.5",
     "@types/multer": "^1.4.12",
     "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
@@ -42,6 +44,7 @@
     "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "tus-node-server": "^0.9.0",
@@ -64,6 +67,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
