--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,10 @@ jobs:
 
       # 2. 设置 Buildx（支持缓存、多架构）
       - uses: docker/setup-buildx-action@v3
-
+      
+      - name: Debug DOCKER_USERNAME
+        run: echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
+        
       # 3. 登录（非 PR 才登录）
       - uses: docker/login-action@v3
         if: github.event_name != 'pull_request'
