--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,22 +16,19 @@ jobs:
 
       # 2. 设置 Buildx（支持缓存、多架构）
       - uses: docker/setup-buildx-action@v3
-      
-      - name: Debug DOCKER_USERNAME
-        run: echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}"
-        
+
       # 3. 登录（非 PR 才登录）
       - uses: docker/login-action@v3
         if: github.event_name != 'pull_request'
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: 766187397@qq.com
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       # 4. 生成镜像元数据（tag、label）
       - id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_USERNAME }}/nest-serve
+          images: 766187397@qq.com/nest-serve
           tags: |
             type=ref,event=branch
             type=ref,event=tag
