--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,45 +1,29 @@
-name: docker-build-push
+name: Docker Build and Push
 
 on:
   push:
-    branches: [main] # 推送到 main 分支时触发
-    tags: ["v*"] # 也可以打 tag 发布版本
-  pull_request: # PR 时仅构建不推送
     branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1. 拉源码
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # 2. 设置 Buildx（支持缓存、多架构）
-      - uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # 3. 登录（非 PR 才登录）
-      - uses: docker/login-action@v3
-        if: github.event_name != 'pull_request'
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: 766187397@qq.com
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 4. 生成镜像元数据（tag、label）
-      - id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: 766187397@qq.com/nest-serve
-          tags: |
-            type=ref,event=branch
-            type=ref,event=tag
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      # 5. 构建并推送
-      - uses: docker/build-push-action@v5
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          push: true
+          images: ${{ secrets.DOCKER_USERNAME }}/nest-serve
+          tags: latest, ${{ github.sha  }}
