feat(config): 添加环境变量配置并优化数据库和邮箱配置
- 在 .env、.env.dev 和 .env.sqlitedb 文件中添加了更多配置项
- 修改了 db.ts 文件，使用环境变量动态配置数据库连接
- 更新了 email.ts 文件，使用环境变量配置邮箱设置
- 优化了 email.service.ts 中的 SMTP 客户端配置

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,48 @@
-# 数据库类型
-DB_TYPE=mysql
 # 地址
-BASE_URL=http://localhost:3000
+BASE_URL=https://www.766187397.dpdns.org
 # 端口
 PORT=3000
 # ip地址
 IP=127.0.0.1
+
+# 主数据库
+# 数据库类型
+DB_TYPE=mysql
+# 数据库地址
+DB_HOST=127.0.0.1
+# 数据库端口
+DB_PORT=3306
+# 数据库用户名
+DB_USER=root
+# 数据库密码
+DB_PASSWORD=123456
+# 数据库名称
+DB_DATABASE=nest-serve
+
+
+# 日志数据库
+# 数据库类型
+LOG_DB_TYPE=mysql
+# 数据库地址
+LOG_DB_HOST=127.0.0.1
+# 数据库端口
+LOG_DB_PORT=3306
+# 数据库用户名
+LOG_DB_USER=root
+# 数据库密码
+LOG_DB_PASSWORD=123456
+# 数据库名称
+LOG_DB_DATABASE=nest-serve-log
+
+
+# 邮箱
+# SMTP主机
+EMAIL_HOST=smtp.qq.com
+# SMTP端口
+EMAIL_PORT=465
+# 使用SSL
+EMAIL_SECURE=true
+# SMTP用户名
+EMAIL_USER=766187397@qq.com
+# SMTP密码
+EMAIL_PASS=zolkzbawjigzbcha
