--- a/.env.sqlitedb
+++ b/.env.sqlitedb
@@ -1,8 +1,29 @@
-# 数据库类型
-DB_TYPE=sqlite
 # 地址
 BASE_URL=http://localhost:3000
 # 端口
 PORT=3000
 # ip地址
 IP=127.0.0.1
+
+# 主数据库
+# 数据库类型
+DB_TYPE=sqlite
+# sqlite路径
+DB_DATABASE=sqlitedata/nest.db
+
+# 日志数据库
+LOG_DB_TYPE=sqlite
+# sqlite路径
+LOG_DB_DATABASE=sqlitedata/nest.db
+
+# 邮箱
+# SMTP主机
+EMAIL_HOST=smtp.qq.com
+# SMTP端口
+EMAIL_PORT=465
+# 使用SSL
+EMAIL_SECURE=true
+# SMTP用户名
+EMAIL_USER=766187397@qq.com
+# SMTP密码
+EMAIL_PASS=zolkzbawjigzbcha
