--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,9 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env
+.env.dev
+.env.sqlitedb
 
 # temp directory
 .temp
