--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
+    "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.1",
     "tus-node-server": "^0.9.0",
     "typeorm": "^0.3.22",
