build(huggingface): 更新 Dockerfile 中的 npm 安装命令
- 将原有的 npm install 更改为 npm ci
- 添加注释说明使用 npm ci 的原因：当前文件有 package-lock.json，如果没有，则使用 npm install

--- a/Dockerfile（huggingface）
+++ b/Dockerfile（huggingface）
@@ -7,7 +7,7 @@ WORKDIR /app
 # 复制依赖声明文件
 COPY package*.json ./
 
-# 安装所有依赖（含 @nestjs/cli，因为 build 时需要）
+# 安装所有依赖（含 @nestjs/cli，因为 build 时需要，当前文件有package-lock.json，如果没有，则 npm install ）
 RUN npm ci
 
 # 复制全部源码
