--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "serve": "nest start --watch",
     "serve:dev": "cross-env NODE_ENV=dev nest start --watch",
     "serve:sqlitedb": "cross-env NODE_ENV=sqlitedb nest start --watch",
-    "start": "node dist/main",
-    "start:sqlitedb": "cross-env NODE_ENV=sqlitedb node dist/main",
+    "start": "cross-env TZ=Asia/Shanghai node dist/main",
+    "start:sqlitedb": "cross-env NODE_ENV=sqlitedb TZ=Asia/Shanghai node dist/main",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
